# whip

./: .clang-format  CMakeLists.txt  README.md
cmake/: hwh-config.cmake  hwh.hpp.in  hwh_helpers.cmake  whip-config.cmake  whip.hpp.in  whip_helpers.cmake
include/: hwh.hpp
